add respond and html5 shiv js files for IE support

--- a/app/index.html
+++ b/app/index.html
@@ -18,11 +18,11 @@
     <link href="assets/css/style.min.css" rel="stylesheet">
 
     <script src="assets/js/vendor/modernizr-2.6.2.min.js"></script>
-<style>
-  .col-md-9 {
-    background-color: #999;
-  }
-</style>
+    <!-- HTML5 shim and Respond.js IE8 support for media queries and the rest -->
+    <!--[if lt IE 9]>
+      <script src='./assets/js/vendor/html5shiv.js'></script>
+      <script src='./assets/js/vendor/respond.js'></script>
+    <![endif]-->
   </head>
   <body>
    <!--[if gte IE 9]>
