add bootstrap glyphs

--- a/app/index.html
+++ b/app/index.html
@@ -69,7 +69,7 @@
                 <a class='btn btn-default' href="javascript:$('body').css('font-size', '-=5');">-</a>
               </p>
             </div>
-            <div class='col-lg-8 col-md-10 col-xs-12'>
+            <div class='col-lg-8 col-lg-push-2 col-md-8 col-md-push-2 col-xs-12'>
               <p>Dear Fellow Investor,</p>
               <p>
               I don&#8217;t know how you&#8217;re investing now, but I do know this:  2013 will be remembered as one of the most profitable years on record.
@@ -80,7 +80,7 @@
 
         <div class="container-fluid">
           <div class="row">
-            <div class="col-lg-8 col-lg-push-2 col-md-8">
+            <div class="col-lg-8 col-lg-push-2 col-md-8 col-md-push-2">
               <form method="post" id="order_form" class="" role="form" action="./index.php?id=198&amp;source=wq01">
                 <input type="hidden" name="form_referrer" value="" />
                 <fieldset>
