--- a/app/index.html
+++ b/app/index.html
@@ -69,7 +69,8 @@
                 <a class='btn btn-default' href="javascript:$('body').css('font-size', '-=5');">-</a>
               </p>
             </div>
-            <div class='col-lg-8 col-lg-push-2 col-md-8 col-md-push-2 col-xs-12'>
+            <div class="clearfix"></div>
+            <div class='col-lg-8 col-lg-pull-2 col-md-8 col-md-push-2 col-xs-12'>
               <p>Dear Fellow Investor,</p>
               <p>
               I don&#8217;t know how you&#8217;re investing now, but I do know this:  2013 will be remembered as one of the most profitable years on record.
