--- a/app/index.html
+++ b/app/index.html
@@ -228,6 +228,7 @@
                                 Credit Card
                           </label>
                         </div>
+                        <div class="clearfix"></div>
                         <div class='col-md-6 col-xs-6 form-group'>
                           <label for="BillMe" class="radio ">
                             <input class="km_include" type="radio"
@@ -291,16 +292,18 @@
                               type='text' name='txtCCName' id='txtCCName' />
                           </div>
                         </div>
+                        <div class="clearfix"></div>
                         <div class='form-row'>
-                          <div class='col-md-9 col-xs-8 form-group txtAddr required'>
+                          <div class='col-md-8 col-xs-8 form-group txtAddr required'>
                             <label class='control-label'>Street Address</label>
                             <input class='form-control txtAddr' type='text' name='txtAddr' id='txtAddr' />
                           </div>
-                          <div class='col-md-3 col-xs-4 form-group txtAddr2 required'>
+                          <div class='col-md-4 col-xs-4 form-group txtAddr2 required'>
                             <label class='control-label'>Apt</label>
                             <input class='form-control txtAddr2' type='text' name='txtAddr2' id='txtAddr2' />
                           </div>
                         </div>
+                        <div class="clearfix"></div>
                         <div class='form-row'>
                           <div class='col-md-6 form-group txtCity required'>
                             <label class='control-label'>City</label>
