--- a/app/index.html
+++ b/app/index.html
@@ -305,7 +305,7 @@
                         </div>
                         <div class="clearfix"></div>
                         <div class='form-row'>
-                          <div class='col-md-6 form-group txtCity required'>
+                          <div class='col-md-8 form-group txtCity required'>
                             <label class='control-label'>City</label>
                             <input class='form-control txtCity' type='text' name='txtCity' id='txtCity' />
                           </div>
@@ -387,7 +387,7 @@
                               <option value='YT'>Yukon</option>
                             </select>
                           </div><!-- end txtState -->
-                          <div class='col-md-4 col-xs-12 form-group txtZip required'>
+                          <div class='col-lg-8 col-md-10 col-xs-12 form-group txtZip required'>
                             <label class='control-label'>Zip Code</label>
                             <input class='form-control txtZip' type='text' name='txtZip' id='txtZip' />
                           </div>
