tweaked layout, can style without breaking

--- a/app/index.html
+++ b/app/index.html
@@ -305,7 +305,7 @@
                         </div>
                         <div class="clearfix"></div>
                         <div class='form-row'>
-                          <div class='col-md-8 form-group txtCity required'>
+                          <div class='col-lg-8 col-md-10 form-group txtCity required'>
                             <label class='control-label'>City</label>
                             <input class='form-control txtCity' type='text' name='txtCity' id='txtCity' />
                           </div>
