--- a/app/index.html
+++ b/app/index.html
@@ -122,86 +122,90 @@
                           <input class='form-control txtFName' type='text' name='txtFName' id='txtFName' />
                         </div>
                         <div class='col-md-6 form-group txtLName required'>
-                          <label class='control-label'>Last Name</label>
-                          <input class='form-control txtLName'
-                                type='text' name='txtLName' id='txtLName' />
+                          <label class='control-label'>Last Name
+                            <input class='form-control txtLName type='text' name='txtLName' id='txtLName' />
+                          </label>
                         </div>
                       </div><!-- end .form-row -->
                       <div class='form-row'>
                         <div class='col-md-12 form-group txtEmail required'>
-                          <label class='control-label'>Email Address</label>
+                          <label class='control-label'>Email Address
                             <div class='input-group'>
                               <input class='km_include form-control'
                                 type='email' name='txtEmail' id='txtEmail'
                                 placeholder='user@address.com' />
                               <span class='input-group-addon glyphicon glyphicon-envelope'> </span>
                             </div>
+                          </label>
                         </div>
                       </div><!-- end form-row -->
                       <div class='form-row'>
                         <div class='col-md-12 form-group txtEmailConfirm required'>
-                          <label class='control-label'>Confirm Email Address</label>
-                          <div class='input-group'>
-                            <input class='km_include form-control' type='email'
-                                name='txtEmailConfirm' id='txtEmailConfirm'
-                                placeholder='user@address.com' />
-                            <span class='input-group-addon glyphicon glyphicon-envelope'> </span>
-                          </div>
+                          <label class='control-label'>Confirm Email Address
+                            <div class='input-group'>
+                              <input class='km_include form-control' type='email'
+                                  name='txtEmailConfirm' id='txtEmailConfirm'
+                                  placeholder='user@address.com' />
+                              <span class='input-group-addon glyphicon glyphicon-envelope'> </span>
+                            </div>
+                          </label>                                                              
                         </div>
                       </div><!-- end .form-row -->
                       <div class='form-row'>
                         <div class='col-md-6 form-group txtPhone required'>
-                          <label class='control-label'>Phone Number</label>
-                          <div class='input-group'>
-                            <input class='km_include form-control'
-                              type='phone' name='txtPhone' id='txtPhone' />
-                            <span class='input-group-addon glyphicon glyphicon-earphone'> </span>
-                          </div>
+                          <label class='control-label'>Phone Number
+                            <div class='input-group'>
+                              <input class='km_include form-control'
+                                type='phone' name='txtPhone' id='txtPhone' />
+                              <span class='input-group-addon glyphicon glyphicon-earphone'> </span>
+                            </div>
+                         </label>                                                                
                         </div>
                         <div class='col-md-6 form-group txtMobilePhone'>
-                          <label class='control-label'>Mobile Phone</label>
-                          <div class='input-group'>
-                            <input class='km_include form-control'
-                              type='phone' name='txtMobilePhone' id='txtMobilePhone' />
-                            <div class='input-group-btn'>
-                              <button type='button' class='btn btn-default dropdown-toggle'
-                                data-toggle='dropdown'>
-                                <span class='glyphicon glyphicon-phone' data-bind="label"></span>
-                                <span class='caret'></span>
-                              </button>
-                              <ul class='dropdown-menu pull-right' id='mobileProvider'>
-                                <li><a href='#' data-carrier='txt.att.net'>Consumer Cellular</a></li>
-                                <li><a href='#' data-carrier='bellmobility.ca'>Bell Canada</a></li>
-                                <li><a href='#' data-carrier='txt.bell.ca'>Bell Mobility (Canada)</a></li>
-                                <li><a href='#' data-carrier='myboostmobile.com'>Boost Mobile</a></li>
-                                <li><a href='#' data-carrier='pcs.rogers.com'>Rogers Wireless</a></li>
-                                <li><a href='#' data-carrier='mymetropcs.com'>Metro PCS</a></li>
-                                <li><a href='#' data-carrier='mobistar.be'>Mobistar (Belgium)</a></li>
-                                <li><a href='#' data-carrier='messaging.nextel.com'>Nextel</a></li>
-                                <li><a href='#' data-carrier='o2imail.co.uk'>O2 (UK)</a></li>
-                                <li><a href='#' data-carrier='o2online.de'>O2 (Deutschland)</a></li>
-                                <li><a href='#' data-carrier='sms.orange.nl'>Orange (Nederland)</a></li>
-                                <li><a href='#' data-carrier='orange.pl'>Orange (Polska)</a></li>
-                                <li><a href='#' data-carrier='orange.net'>Orange (UK)</a></li>
-                                <li><a href='#' data-carrier='mobile.celloneusa.com'>Orange (USA)</a></li>
-                                <li><a href='#' data-carrier='mobile.pinger.com'>Pinger TextFree Web</a></li>
-                                <li><a href='#' data-carrier='messaging.sprintpcs.com'>Sprint (PCS)</a></li>
-                                <li><a href='#' data-carrier='msg.telus.com'>Telus</a></li>
-                                <li><a href='#' data-carrier='tmomail.net'>T-Mobile (USA)</a></li>
-                                <li><a href='#' data-carrier='t-mobile.uk.net'>T-Mobile (UK)</a></li>
-                                <li><a href='#' data-carrier='t-mobile-sms.de'>T-Mobile (Deutschland)</a></li>
-                                <li><a href='#' data-carrier='mobilpost.no'>Telenor (Norway)</a></li>
-                                <li><a href='#' data-carrier='mms.sonofon.dk'>Telenor (DK)</a></li>
-                                <li><a href='#' data-carrier='email.uscc.net'>U.S. Cellular</a></li>
-                                <li><a href='#' data-carrier='vtext.com'>Verizon</a></li>
-                                <li><a href='#' data-carrier='vmobile.ca'>Virgin Mobile (Canada)</a></li>
-                                <li><a href='#' data-carrier='vmobl.com'>Virgin Mobile (USA)</a></li>
-                                <li><a href='#' data-carrier='vxtras.com'>Virgin Mobile (UK)</a></li>
-                                <li><a href='#' data-carrier='mms.vodafone.co.uk'>Vodafone (UK)</a></li>
-                              </ul>
-                            </div><!-- end input-group-btn -->
-                          </div><!-- end input-group -->
-                        </div><!-- text-mobile-group -->
+                          <label class='control-label'>Mobile Phone
+                            <div class='input-group'>
+                              <input class='km_include form-control'
+                                type='phone' name='txtMobilePhone' id='txtMobilePhone' />
+                              <div class='input-group-btn'>
+                                <button type='button' class='btn btn-default dropdown-toggle'
+                                  data-toggle='dropdown'>
+                                  <span class='glyphicon glyphicon-phone' data-bind="label"></span>
+                                  <span class='caret'></span>
+                                </button>
+                                <ul class='dropdown-menu pull-right' id='mobileProvider'>
+                                  <li><a href='#' data-carrier='txt.att.net'>Consumer Cellular</a></li>
+                                  <li><a href='#' data-carrier='bellmobility.ca'>Bell Canada</a></li>
+                                  <li><a href='#' data-carrier='txt.bell.ca'>Bell Mobility (Canada)</a></li>
+                                  <li><a href='#' data-carrier='myboostmobile.com'>Boost Mobile</a></li>
+                                  <li><a href='#' data-carrier='pcs.rogers.com'>Rogers Wireless</a></li>
+                                  <li><a href='#' data-carrier='mymetropcs.com'>Metro PCS</a></li>
+                                  <li><a href='#' data-carrier='mobistar.be'>Mobistar (Belgium)</a></li>
+                                  <li><a href='#' data-carrier='messaging.nextel.com'>Nextel</a></li>
+                                  <li><a href='#' data-carrier='o2imail.co.uk'>O2 (UK)</a></li>
+                                  <li><a href='#' data-carrier='o2online.de'>O2 (Deutschland)</a></li>
+                                  <li><a href='#' data-carrier='sms.orange.nl'>Orange (Nederland)</a></li>
+                                  <li><a href='#' data-carrier='orange.pl'>Orange (Polska)</a></li>
+                                  <li><a href='#' data-carrier='orange.net'>Orange (UK)</a></li>
+                                  <li><a href='#' data-carrier='mobile.celloneusa.com'>Orange (USA)</a></li>
+                                  <li><a href='#' data-carrier='mobile.pinger.com'>Pinger TextFree Web</a></li>
+                                  <li><a href='#' data-carrier='messaging.sprintpcs.com'>Sprint (PCS)</a></li>
+                                  <li><a href='#' data-carrier='msg.telus.com'>Telus</a></li>
+                                  <li><a href='#' data-carrier='tmomail.net'>T-Mobile (USA)</a></li>
+                                  <li><a href='#' data-carrier='t-mobile.uk.net'>T-Mobile (UK)</a></li>
+                                  <li><a href='#' data-carrier='t-mobile-sms.de'>T-Mobile (Deutschland)</a></li>
+                                  <li><a href='#' data-carrier='mobilpost.no'>Telenor (Norway)</a></li>
+                                  <li><a href='#' data-carrier='mms.sonofon.dk'>Telenor (DK)</a></li>
+                                  <li><a href='#' data-carrier='email.uscc.net'>U.S. Cellular</a></li>
+                                  <li><a href='#' data-carrier='vtext.com'>Verizon</a></li>
+                                  <li><a href='#' data-carrier='vmobile.ca'>Virgin Mobile (Canada)</a></li>
+                                  <li><a href='#' data-carrier='vmobl.com'>Virgin Mobile (USA)</a></li>
+                                  <li><a href='#' data-carrier='vxtras.com'>Virgin Mobile (UK)</a></li>
+                                  <li><a href='#' data-carrier='mms.vodafone.co.uk'>Vodafone (UK)</a></li>
+                                </ul>
+                              </div><!-- end input-group-btn -->
+                            </div><!-- end input-group -->
+                          </div><!-- text-mobile-group -->
+                        </label>
                       </div><!-- end form row -->
                       <div class='form-row'>
                         <div class='col-md-12 form-group'>
@@ -295,19 +299,22 @@
                         <div class="clearfix"></div>
                         <div class='form-row'>
                           <div class='col-md-8 col-xs-8 form-group txtAddr required'>
-                            <label class='control-label'>Street Address</label>
-                            <input class='form-control txtAddr' type='text' name='txtAddr' id='txtAddr' />
+                            <label class='control-label'>Street Address
+                              <input class='form-control txtAddr' type='text' name='txtAddr' id='txtAddr' />
+                            </label>
                           </div>
                           <div class='col-md-4 col-xs-4 form-group txtAddr2 required'>
-                            <label class='control-label'>Apt</label>
-                            <input class='form-control txtAddr2' type='text' name='txtAddr2' id='txtAddr2' />
+                            <label class='control-label'>Apt
+                              <input class='form-control txtAddr2' type='text' name='txtAddr2' id='txtAddr2' />
+                            </label>
                           </div>
                         </div>
                         <div class="clearfix"></div>
                         <div class='form-row'>
                           <div class='col-lg-8 col-md-10 form-group txtCity required'>
-                            <label class='control-label'>City</label>
-                            <input class='form-control txtCity' type='text' name='txtCity' id='txtCity' />
+                            <label class='control-label'>City
+                              <input class='form-control txtCity' type='text' name='txtCity' id='txtCity' />
+                            </label>
                           </div>
 
                           <div class='col-md-12 col-xs-12 form-group txtState required'>
@@ -388,8 +395,9 @@
                             </select>
                           </div><!-- end txtState -->
                           <div class='col-lg-8 col-md-10 col-xs-12 form-group txtZip required'>
-                            <label class='control-label'>Zip Code</label>
-                            <input class='form-control txtZip' type='text' name='txtZip' id='txtZip' />
+                            <label class='control-label'>Zip Code
+                              <input class='form-control txtZip' type='text' name='txtZip' id='txtZip' />
+                            </label>
                           </div>
                         </div><!-- end .form-row -->
                         <div class="clearfix"></div>
