--- a/app/index.html
+++ b/app/index.html
@@ -118,8 +118,9 @@
                     <div class='col-md-8'>
                       <div class='form-row'>
                         <div class='col-md-6 form-group txtFName required'>
-                          <label class='control-label'>First Name</label>
-                          <input class='form-control txtFName' type='text' name='txtFName' id='txtFName' />
+                          <label class='control-label'>First Name
+                            <input class='form-control txtFName' type='text' name='txtFName' id='txtFName' />
+                          </label>
                         </div>
                         <div class='col-md-6 form-group txtLName required'>
                           <label class='control-label'>Last Name
