--- a/app/index.html
+++ b/app/index.html
@@ -124,32 +124,32 @@
                         </div>
                         <div class='col-md-6 form-group txtLName required'>
                           <label class='control-label'>Last Name
-                            <input class='form-control txtLName type='text' name='txtLName' id='txtLName' />
+                            <input class='form-control txtLName' type='text' name='txtLName' id='txtLName' />
                           </label>
                         </div>
                       </div><!-- end .form-row -->
                       <div class='form-row'>
                         <div class='col-md-12 form-group txtEmail required'>
-                          <label class='control-label'>Email Address
-                            <div class='input-group'>
+													<div class='input-group'>
+														<label class='control-label'>Email Address
                               <input class='km_include form-control'
                                 type='email' name='txtEmail' id='txtEmail'
                                 placeholder='user@address.com' />
-                              <span class='input-group-addon glyphicon glyphicon-envelope'> </span>
-                            </div>
-                          </label>
+                              <span class='input-group-addon glyphicon glyphicon-envelope'></span>
+														</label>
+                          </div>
                         </div>
                       </div><!-- end form-row -->
                       <div class='form-row'>
                         <div class='col-md-12 form-group txtEmailConfirm required'>
-                          <label class='control-label'>Confirm Email Address
-                            <div class='input-group'>
+													<div class='input-group'>
+														<label class='control-label'>Confirm Email Address
                               <input class='km_include form-control' type='email'
                                   name='txtEmailConfirm' id='txtEmailConfirm'
                                   placeholder='user@address.com' />
                               <span class='input-group-addon glyphicon glyphicon-envelope'> </span>
-                            </div>
-                          </label>                                                              
+														</label>
+                          </div>
                         </div>
                       </div><!-- end .form-row -->
                       <div class='form-row'>
@@ -160,11 +160,11 @@
                                 type='phone' name='txtPhone' id='txtPhone' />
                               <span class='input-group-addon glyphicon glyphicon-earphone'> </span>
                             </div>
-                         </label>                                                                
+                         </label>
                         </div>
                         <div class='col-md-6 form-group txtMobilePhone'>
-                          <label class='control-label'>Mobile Phone
-                            <div class='input-group'>
+													<div class='input-group'>
+														<label class='control-label'>Mobile Phone</label>
                               <input class='km_include form-control'
                                 type='phone' name='txtMobilePhone' id='txtMobilePhone' />
                               <div class='input-group-btn'>
@@ -204,9 +204,8 @@
                                   <li><a href='#' data-carrier='mms.vodafone.co.uk'>Vodafone (UK)</a></li>
                                 </ul>
                               </div><!-- end input-group-btn -->
-                            </div><!-- end input-group -->
-                          </div><!-- text-mobile-group -->
-                        </label>
+                          </div><!-- end input-group -->
+                        </div><!-- text-mobile-group -->
                       </div><!-- end form row -->
                       <div class='form-row'>
                         <div class='col-md-12 form-group'>
@@ -292,9 +291,10 @@
                         </div><!-- end .form-row -->
                         <div class='form-row'>
                           <div class='col-md-12 form-group txtCCName required'>
-                            <label class='control-label'>Cardholder Name</label>
-                            <input class='form-control txtCCName'
-                              type='text' name='txtCCName' id='txtCCName' />
+                            <label class='control-label'>Cardholder Name
+															<input class='form-control txtCCName'
+																type='text' name='txtCCName' id='txtCCName' />
+														</label>
                           </div>
                         </div>
                         <div class="clearfix"></div>
