--- a/app/index.html
+++ b/app/index.html
@@ -130,20 +130,20 @@
                       </div><!-- end .form-row -->
                       <div class='form-row'>
                         <div class='col-md-12 form-group txtEmail required'>
-													<div class='input-group'>
-														<label class='control-label'>Email Address
+													<label class='control-label'>Email Address
+														<div class='input-group'>
                               <input class='km_include form-control'
                                 type='email' name='txtEmail' id='txtEmail'
                                 placeholder='user@address.com' />
-                              <span class='input-group-addon glyphicon glyphicon-envelope'></span>
 														</label>
+                            <span class='input-group-addon glyphicon glyphicon-envelope'></span>
                           </div>
                         </div>
                       </div><!-- end form-row -->
                       <div class='form-row'>
                         <div class='col-md-12 form-group txtEmailConfirm required'>
-													<div class='input-group'>
-														<label class='control-label'>Confirm Email Address
+													<label class='control-label'>Confirm Email Address
+														<div class='input-group'>
                               <input class='km_include form-control' type='email'
                                   name='txtEmailConfirm' id='txtEmailConfirm'
                                   placeholder='user@address.com' />
@@ -163,10 +163,11 @@
                          </label>
                         </div>
                         <div class='col-md-6 form-group txtMobilePhone'>
-													<div class='input-group'>
-														<label class='control-label'>Mobile Phone</label>
+													<label class='control-label'>Mobile Phone
+														<div class='input-group'>
                               <input class='km_include form-control'
                                 type='phone' name='txtMobilePhone' id='txtMobilePhone' />
+														</label>
                               <div class='input-group-btn'>
                                 <button type='button' class='btn btn-default dropdown-toggle'
                                   data-toggle='dropdown'>
@@ -244,9 +245,9 @@
                           <div class='col-md-12 form-group txtCCNumber required'>
                             <label class='control-label'>Credit Card Number
                               <span class="glyphicon glyphicon-lock"></span>
+															<input class='form-control txtCCNumber'
+																type='text' name='txtCCNumber' id='txtCCNumber' />
                             </label>
-                            <input class='form-control txtCCNumber'
-                              type='text' name='txtCCNumber' id='txtCCNumber' />
                           </div>
                         </div><!-- end .form-row -->
                         <div class='form-row'>
