--- a/app/index.html
+++ b/app/index.html
@@ -115,22 +115,22 @@
                   <legend>Step 2 - Contact Information</legend>
                   <p><em>All fields required unless otherwise indicated.</em></p>
                   <div class='row'>
-                    <div class='col-md-8'>
+                    <div class='col-md-12'>
                       <div class='form-row'>
                         <div class='col-md-6 form-group txtFName required'>
-                          <label class='control-label'>First Name
+                          <label class='control-label col-md-12'>First Name
                             <input class='form-control txtFName' type='text' name='txtFName' id='txtFName' />
                           </label>
                         </div>
                         <div class='col-md-6 form-group txtLName required'>
-                          <label class='control-label'>Last Name
+                          <label class='control-label col-md-12'>Last Name
                             <input class='form-control txtLName' type='text' name='txtLName' id='txtLName' />
                           </label>
                         </div>
                       </div><!-- end .form-row -->
                       <div class='form-row'>
                         <div class='col-md-12 form-group txtEmail required'>
-													<label class='control-label'>Email Address
+													<label class='control-label col-md-12'>Email Address
 														<div class='input-group'>
                               <input class='km_include form-control'
                                 type='email' name='txtEmail' id='txtEmail'
@@ -142,7 +142,7 @@
                       </div><!-- end form-row -->
                       <div class='form-row'>
                         <div class='col-md-12 form-group txtEmailConfirm required'>
-													<label class='control-label'>Confirm Email Address
+													<label class='control-label col-md-12'>Confirm Email Address
 														<div class='input-group'>
                               <input class='km_include form-control' type='email'
                                   name='txtEmailConfirm' id='txtEmailConfirm'
@@ -154,7 +154,7 @@
                       </div><!-- end .form-row -->
                       <div class='form-row'>
                         <div class='col-md-6 form-group txtPhone required'>
-                          <label class='control-label'>Phone Number
+                          <label class='control-label col-md-12'>Phone Number
                             <div class='input-group'>
                               <input class='km_include form-control'
                                 type='phone' name='txtPhone' id='txtPhone' />
@@ -163,7 +163,7 @@
                          </label>
                         </div>
                         <div class='col-md-6 form-group txtMobilePhone'>
-													<label class='control-label'>Mobile Phone
+													<label class='control-label col-md-12'>Mobile Phone
 														<div class='input-group'>
                               <input class='km_include form-control'
                                 type='phone' name='txtMobilePhone' id='txtMobilePhone' />
@@ -300,12 +300,12 @@
                         </div>
                         <div class="clearfix"></div>
                         <div class='form-row'>
-                          <div class='col-md-8 col-xs-8 form-group txtAddr required'>
+                          <div class='col-md-6 col-xs-6 form-group txtAddr required'>
                             <label class='control-label'>Street Address
                               <input class='form-control txtAddr' type='text' name='txtAddr' id='txtAddr' />
                             </label>
                           </div>
-                          <div class='col-md-4 col-xs-4 form-group txtAddr2 required'>
+                          <div class='col-md-6 col-xs-6 form-group txtAddr2 required'>
                             <label class='control-label'>Apt
                               <input class='form-control txtAddr2' type='text' name='txtAddr2' id='txtAddr2' />
                             </label>
@@ -313,7 +313,7 @@
                         </div>
                         <div class="clearfix"></div>
                         <div class='form-row'>
-                          <div class='col-lg-8 col-md-10 form-group txtCity required'>
+                          <div class='col-lg-12 col-md-10 form-group txtCity required'>
                             <label class='control-label'>City
                               <input class='form-control txtCity' type='text' name='txtCity' id='txtCity' />
                             </label>
